# gstreamer

./: Makefile.am  configure.ac  meson.build  meson_options.txt
data/: gst  gst-inspect-1.0  gst-launch-1.0
docs/: Makefile.am  gst-libs-index.md  gst-libs-sitemap.txt  gst-sitemap.txt  meson.build  plugins-index.md  plugins-sitemap.txt  sitemap.txt
docs/base/: gstbitreader.h.markdown
docs/design/: draft-tracing.txt
docs/gst/: gstreamer-sections.txt
docs/gst_new_doc/: .gitignore  Makefile.am
docs/gst_new_doc/markdown_files/: GStreamer_Core_Library.markdown  GStreamer_Core_Support.markdown  GStreamer_Device_Discovery_and_Device_Probing.markdown  GStreamer_Overview.markdown  Gst.markdown  GstAllocator.markdown  GstAtomicQueue.markdown  GstBin.markdown  GstBuffer.markdown  GstBufferList.markdown  GstBufferPool.markdown  GstBus.markdown  GstCaps.markdown  GstCapsFeatures.markdown  GstChildProxy.markdown  GstClock.markdown  GstConfig.markdown  GstContext.markdown  GstControlBinding.markdown  GstControlSource.markdown  GstDateTime.markdown  GstDevice.markdown  GstDeviceMonitor.markdown  GstDeviceProvider.markdown  GstDeviceProviderFactory.markdown  GstElement.markdown  GstElementFactory.markdown  GstEvent.markdown  GstFormat.markdown  GstGError.markdown  GstGhostPad.markdown  GstInfo.markdown  GstIterator.markdown  GstMemory.markdown  GstMessage.markdown  GstMeta.markdown  GstMiniObject.markdown  GstObject.markdown  GstPad.markdown  GstPadTemplate.markdown  (+32 more)
docs/hotdoc/: index.md  meson.build  sitemap.txt
docs/hotdoc-extension/: hotdoc-plugin-scanner.c  meson.build
docs/hotdoc-extension/hotdoc_gst_extension/: gst_extension.py
docs/hotdoc/gst/: gstelement.h.markdown  gsterror.h.markdown
docs/hotdoc/hotdoc-extension/: hotdoc-plugin-scanner.c  meson.build  setup.py
docs/hotdoc/hotdoc-extension/hotdoc_gst_extension/: gst_extension.py  meson.build
docs/hotdoc/libs/base/: gstbytereader.h.markdown  gstbytewriter.h.markdown
docs/hotdoc/plugins/: cache.json  index.md
gst/: Makefile.am  gst.c  gst.h  gst_private.h  gstallocator.c  gstallocator.h  gstatomicqueue.c  gstbin.c  gstbin.h  gstbuffer.c  gstbuffer.h  gstbufferlist.c  gstbufferlist.h  gstbufferpool.c  gstbufferpool.h  gstbus.c  gstbus.h  gstcaps.c  gstcaps.h  gstcapsfeatures.c  gstcapsfeatures.h  gstchildproxy.c  gstchildproxy.h  gstclock.c  gstclock.h  gstcontext.c  gstcontext.h  gstcontrolbinding.c  gstcontrolbinding.h  gstcontrolsource.c  gstcontrolsource.h  gstdatetime.c  gstdatetime.h  gstdebugutils.c  gstdebugutils.h  gstdevice.c  gstdevice.h  gstdevicemonitor.c  gstdevicemonitor.h  gstdeviceprovider.c  (+97 more)
gst/parse/: grammar.y
libs/gst/base/: Makefile.am  gstbaseaggregator.c  gstbaseaggregator.h  gstbaseparse.c  gstbasesink.c  gstbasesrc.c  gstbasetransform.c  meson.build
libs/gst/check/: gstcheck.c  gstcheck.h  gstconsistencychecker.c  gstharness.c  gsttestclock.c  meson.build
libs/gst/controller/: gsttimedvaluecontrolsource.c  meson.build
libs/gst/net/: meson.build
plugins/: Makefile.am  meson.build
plugins/elements/: gstcapsfilter.c  gstdataurisrc.c  gstfdsrc.c  gstfilesrc.c  gstinputselector.c  gstmultiqueue.c  gstqueue.c  gsttee.c
tests/check/: Makefile.am
tests/check/gst/: gstchildproxy.c  gsttracer.c
tests/check/libs/: baseaggregator.c
tools/: Makefile.am  gst-completion-helper.c
win32/common/: libgstreamer.def
